--- a/galaxy/lxappearance-obconf-gtk3/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxappearance-obconf-gtk3/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lxappearance-obconf-gtk3
-  version: 0.2.3-3
+  version: 0.2.3-4.1
   arch:
     - x86_64
   pkgname:
     - lxappearance-obconf-gtk3
 actions:
   addRepo: galaxy
-  removeRepo: world
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 0.2.3-3
+    version: 0.2.3-4
     packages:
-      - lxappearance-obconf-gtk3-0.2.3-3-x86_64.pkg.tar.zst
+      - lxappearance-obconf-gtk3-0.2.3-4-x86_64.pkg.tar.zst
+  galaxy:
+    version: 0.2.3-4.1
+    packages:
+      - lxappearance-obconf-gtk3-0.2.3-4.1-x86_64.pkg.tar.zst
 team: galaxy
