--- a/galaxy/lxappearance-obconf-gtk3/PKGBUILD
+++ b/galaxy/lxappearance-obconf-gtk3/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=lxappearance-obconf-gtk3
 _pkgname=lxappearance-obconf
 pkgver=0.2.3
-pkgrel=3
+pkgrel=4.1
 pkgdesc='Plugin for LXAppearance to configure Openbox (GTK+ 3 version)'
 arch=('x86_64')
 license=('GPL2')
@@ -14,7 +14,7 @@ depends=('lxappearance-gtk3' 'openbox' 'libobrender.so')
 makedepends=('intltool')
 conflicts=($_pkgname)
 source=(https://downloads.sourceforge.net/lxde/$_pkgname-$pkgver.tar.xz)
-md5sums=('ae0076d489aa786f5d573f7ff592a4ab')
+sha256sums=('3150b33b4b7beb71c1803aee2be21c94767d73b70dfc8d2bcaafe2650ea83149')
 
 prepare() {
   cd $_pkgname-$pkgver
@@ -26,6 +26,7 @@ prepare() {
 
 build() {
   cd $_pkgname-$pkgver
+  CFLAGS+=' -Wno-implicit-function-declaration -Wno-int-conversion'
   ./configure --prefix=/usr --enable-gtk3
 
   #https://bugzilla.gnome.org/show_bug.cgi?id=656231
