--- a/galaxy/lxpanel/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxpanel/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: lxpanel
-  version: 0.11.1-1
+  version: 0.11.1-2.1
   arch:
     - x86_64
   pkgname:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 0.11.1-1
+    version: 0.11.1-2
     packages:
-      - lxpanel-0.11.1-1-x86_64.pkg.tar.zst
+      - lxpanel-0.11.1-2-x86_64.pkg.tar.zst
+  galaxy:
+    version: 0.11.1-2.1
+    packages:
+      - lxpanel-0.11.1-2.1-x86_64.pkg.tar.zst
 team: galaxy
