--- a/galaxy/lxpanel-gtk3/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxpanel-gtk3/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: lxpanel-gtk3
-  version: 0.10.1-1
+  version: 0.10.1-2.1
   arch:
     - x86_64
   pkgname:
     - lxpanel-gtk3
 actions:
   addRepo: galaxy
-  removeRepo: world
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 0.10.1-1
+    version: 0.10.1-2
     packages:
-      - lxpanel-gtk3-0.10.1-1-x86_64.pkg.tar.zst
+      - lxpanel-gtk3-0.10.1-2-x86_64.pkg.tar.zst
+  galaxy:
+    version: 0.10.1-2.1
+    packages:
+      - lxpanel-gtk3-0.10.1-2.1-x86_64.pkg.tar.zst
 team: galaxy
