--- a/galaxy/mate-media/.artixlinux/pkgbase.yaml
+++ b/galaxy/mate-media/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: mate-media
-  version: 1.28.1-2
+  version: 1.28.1-3.1
   arch:
     - x86_64
   pkgname:
     - mate-media
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 1.28.1-2
+    version: 1.28.1-3
     packages:
-      - mate-media-1.28.1-2-x86_64.pkg.tar.zst
+      - mate-media-1.28.1-3-x86_64.pkg.tar.zst
+  galaxy:
+    version: 1.28.1-3.1
+    packages:
+      - mate-media-1.28.1-3.1-x86_64.pkg.tar.zst
 team: galaxy
