--- a/galaxy/xfce4-weather-plugin/.artixlinux/pkgbase.yaml
+++ b/galaxy/xfce4-weather-plugin/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: xfce4-weather-plugin
-  version: 0.11.3-1
+  version: 0.11.3-2.1
   arch:
     - x86_64
   pkgname:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 0.11.3-1
+    version: 0.11.3-2
     packages:
-      - xfce4-weather-plugin-0.11.3-1-x86_64.pkg.tar.zst
+      - xfce4-weather-plugin-0.11.3-2-x86_64.pkg.tar.zst
+  galaxy:
+    version: 0.11.3-2.1
+    packages:
+      - xfce4-weather-plugin-0.11.3-2.1-x86_64.pkg.tar.zst
 team: galaxy
