--- a/galaxy/wcm/.artixlinux/pkgbase.yaml
+++ b/galaxy/wcm/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: wcm
-  version: 0.9.0-1
+  version: 0.9.0-1.1
   arch:
     - x86_64
   pkgname:
     - wcm
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -50,6 +50,6 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.9.0-1
+    version: 0.9.0-1.1
     packages:
-      - wcm-0.9.0-1-x86_64.pkg.tar.zst
+      - wcm-0.9.0-1.1-x86_64.pkg.tar.zst
