--- a/galaxy/wf-config/.artixlinux/pkgbase.yaml
+++ b/galaxy/wf-config/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: galaxy
 pkgbase:
   name: wf-config
-  version: 0.9.0-2
+  version: 0.9.0-2.1
   arch:
     - x86_64
   pkgname:
     - wf-config
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -50,6 +50,6 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.9.0-2
+    version: 0.9.0-2.1
     packages:
-      - wf-config-0.9.0-2-x86_64.pkg.tar.zst
+      - wf-config-0.9.0-2.1-x86_64.pkg.tar.zst
