--- a/galaxy/atril/.artixlinux/pkgbase.yaml
+++ b/galaxy/atril/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: atril
-  version: 1.28.1-1
+  version: 1.28.1-3
   arch:
     - x86_64
   pkgname:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 1.28.1-1
+    version: 1.28.1-3
     packages:
-      - atril-1.28.1-1-x86_64.pkg.tar.zst
+      - atril-1.28.1-3-x86_64.pkg.tar.zst
+  galaxy:
+    version: 1.28.1-3
+    packages:
+      - atril-1.28.1-3-x86_64.pkg.tar.zst
 team: galaxy
