--- a/galaxy/libcmis/.artixlinux/pkgbase.yaml
+++ b/galaxy/libcmis/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libcmis
-  version: 0.6.2-3
+  version: 0.6.2-5
   arch:
     - x86_64
   pkgname:
     - libcmis
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-goblins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 0.6.2-3
+    version: 0.6.2-5
     packages:
-      - libcmis-0.6.2-3-x86_64.pkg.tar.zst
+      - libcmis-0.6.2-5-x86_64.pkg.tar.zst
 team: galaxy
