--- a/galaxy/cinnamon/.artixlinux/pkgbase.yaml
+++ b/galaxy/cinnamon/.artixlinux/pkgbase.yaml
@@ -8,11 +8,11 @@ pkgbase:
     - cinnamon
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -43,15 +43,13 @@ repos:
     version: null
     packages: []
   galaxy-goblins:
+    version: null
+    packages: []
+  galaxy-gremlins:
+    version: null
+    packages: []
+  galaxy:
     version: 6.4.10-1.1
     packages:
       - cinnamon-6.4.10-1.1-x86_64.pkg.tar.zst
-  galaxy-gremlins:
-    version: 6.4.10-1
-    packages:
-      - cinnamon-6.4.10-1-x86_64.pkg.tar.zst
-  galaxy:
-    version: 6.4.10-1.2
-    packages:
-      - cinnamon-6.4.10-1.2-x86_64.pkg.tar.zst
 team: galaxy
