--- a/galaxy/font-manager/.artixlinux/pkgbase.yaml
+++ b/galaxy/font-manager/.artixlinux/pkgbase.yaml
@@ -9,11 +9,11 @@ pkgbase:
     - font-manager
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -47,11 +47,10 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
+    version: null
+    packages: []
+  galaxy:
     version: 0.9.4-2
     packages:
       - font-manager-0.9.4-2-x86_64.pkg.tar.zst
-  galaxy:
-    version: 0.9.4-2.1
-    packages:
-      - font-manager-0.9.4-2.1-x86_64.pkg.tar.zst
 team: galaxy
