--- a/galaxy/lxappearance-obconf/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxappearance-obconf/.artixlinux/pkgbase.yaml
@@ -8,11 +8,11 @@ pkgbase:
     - lxappearance-obconf
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,11 +46,10 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
+    version: null
+    packages: []
+  galaxy:
     version: 0.2.4-2
     packages:
       - lxappearance-obconf-0.2.4-2-x86_64.pkg.tar.zst
-  galaxy:
-    version: 0.2.4-2.1
-    packages:
-      - lxappearance-obconf-0.2.4-2.1-x86_64.pkg.tar.zst
 team: galaxy
