--- a/galaxy/mate-notification-daemon/.artixlinux/pkgbase.yaml
+++ b/galaxy/mate-notification-daemon/.artixlinux/pkgbase.yaml
@@ -8,11 +8,11 @@ pkgbase:
     - mate-notification-daemon
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,9 +46,8 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: 1.28.1-2
-    packages:
-      - mate-notification-daemon-1.28.1-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   galaxy:
     version: 1.28.1-2
     packages:
