--- a/galaxy/openbox/.artixlinux/pkgbase.yaml
+++ b/galaxy/openbox/.artixlinux/pkgbase.yaml
@@ -8,11 +8,11 @@ pkgbase:
     - openbox
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,11 +46,10 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
+    version: null
+    packages: []
+  galaxy:
     version: 3.6.1-12
     packages:
       - openbox-3.6.1-12-x86_64.pkg.tar.zst
-  galaxy:
-    version: 3.6.1-11.1
-    packages:
-      - openbox-3.6.1-11.1-x86_64.pkg.tar.zst
 team: galaxy
