--- a/world/nvme-cli/.artixlinux/pkgbase.yaml
+++ b/world/nvme-cli/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: nvme-cli
-  version: 2.12-1
+  version: 2.13-1
   arch:
     - x86_64
   pkgname:
     - nvme-cli
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.12-1
+    version: 2.13-1
     packages:
-      - nvme-cli-2.12-1-x86_64.pkg.tar.zst
+      - nvme-cli-2.13-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
