--- a/world/grilo-plugins/.artixlinux/pkgbase.yaml
+++ b/world/grilo-plugins/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: grilo-plugins
-  version: 1:0.3.16+r46+gea3afa8c-1.1
+  version: 1:0.3.16+r46+gea3afa8c-2
   arch:
     - x86_64
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:0.3.16+r46+gea3afa8c-1.1
+    version: 1:0.3.16+r46+gea3afa8c-2
     packages:
-      - grilo-plugins-1:0.3.16+r46+gea3afa8c-1.1-x86_64.pkg.tar.zst
+      - grilo-plugins-1:0.3.16+r46+gea3afa8c-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -50,6 +50,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: null
-    packages: []
-team: world
+    version: 1:0.3.16+r46+gea3afa8c-2
+    packages:
+      - grilo-plugins-1:0.3.16+r46+gea3afa8c-2-x86_64.pkg.tar.zst
+team: galaxy
