--- a/world/hypridle/.artixlinux/pkgbase.yaml
+++ b/world/hypridle/.artixlinux/pkgbase.yaml
@@ -2,7 +2,7 @@
 team: world
 pkgbase:
   name: hypridle
-  version: 0.1.6-3
+  version: 0.1.6-4
   arch:
     - x86_64
     - aarch64
@@ -10,11 +10,11 @@ pkgbase:
     - hypridle
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,9 +33,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.1.6-3
+    version: 0.1.6-4
     packages:
-      - hypridle-0.1.6-3-x86_64.pkg.tar.zst
+      - hypridle-0.1.6-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
