--- a/world/gnome-music/.artixlinux/pkgbase.yaml
+++ b/world/gnome-music/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: gnome-music
-  version: 1:48beta-2
+  version: 1:48.0-1
   arch:
     - any
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:48beta-2
+    version: 1:48.0-1
     packages:
-      - gnome-music-1:48beta-2-any.pkg.tar.zst
+      - gnome-music-1:48.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
