--- a/galaxy/mate-notification-daemon/.artixlinux/pkgbase.yaml
+++ b/galaxy/mate-notification-daemon/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: mate-notification-daemon
-  version: 1.28.1-2
+  version: 1.28.1-2.1
   arch:
     - x86_64
   pkgname:
     - mate-notification-daemon
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 1.28.1-2
+    version: 1.28.1-2.1
     packages:
-      - mate-notification-daemon-1.28.1-2-x86_64.pkg.tar.zst
+      - mate-notification-daemon-1.28.1-2.1-x86_64.pkg.tar.zst
 team: galaxy
