--- a/world/arrow/.artixlinux/pkgbase.yaml
+++ b/world/arrow/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: arrow
-  version: 19.0.1-7
+  version: 19.0.1-8
   arch:
     - x86_64
   pkgname:
     - arrow
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 19.0.1-7
+    version: 19.0.1-8
     packages:
-      - arrow-19.0.1-7-x86_64.pkg.tar.zst
+      - arrow-19.0.1-8-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
