--- a/world/jenkins/.artixlinux/pkgbase.yaml
+++ b/world/jenkins/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: jenkins
-  version: 2.507-1
+  version: 2.508-1
   arch:
     - any
   pkgname:
     - jenkins
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.507-1
+    version: 2.508-1
     packages:
-      - jenkins-2.507-1-any.pkg.tar.zst
+      - jenkins-2.508-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
