--- a/world/kismet/PKGBUILD
+++ b/world/kismet/PKGBUILD
@@ -6,11 +6,11 @@
 pkgname=kismet
 pkgver=2023_07_R2
 _realver="${pkgver//_/-}"
-pkgrel=1
+pkgrel=2
 pkgdesc="802.11 layer2 wireless network detector, sniffer, and intrusion detection system"
 url="https://www.kismetwireless.net/"
 arch=('x86_64')
-license=('GPL')
+license=('GPL-2.0-or-later')
 depends=('libpcap' 'pcre2' 'bluez-libs' 'libcap' 'protobuf-c' 'libprotobuf-c.so'
          'sqlite' 'libnm' 'gcc-libs' 'libusb' 'libusb-1.0.so' 'libnl' 'glibc' 'zlib' 'libelf'
          'lm_sensors' 'python' 'python-setuptools' 'python-protobuf' 'python-pyserial'
