--- a/world/libconfig/.artixlinux/pkgbase.yaml
+++ b/world/libconfig/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libconfig
-  version: 1.7.3-3
+  version: 1.8-1
   arch:
     - x86_64
   pkgname:
     - libconfig
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.7.3-3
+    version: 1.8-1
     packages:
-      - libconfig-1.7.3-3-x86_64.pkg.tar.zst
+      - libconfig-1.8-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
