--- a/world/vlc/.artixlinux/pkgbase.yaml
+++ b/world/vlc/.artixlinux/pkgbase.yaml
@@ -26,18 +26,16 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 3.0.21-19
-    packages:
-      - vlc-3.0.21-19-x86_64.pkg.tar.zst
-      - libvlc-3.0.21-19-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 3.0.21-18
+    version: 3.0.21-19
     packages:
-      - vlc-3.0.21-18-x86_64.pkg.tar.zst
-      - libvlc-3.0.21-18-x86_64.pkg.tar.zst
+      - vlc-3.0.21-19-x86_64.pkg.tar.zst
+      - libvlc-3.0.21-19-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
