--- a/world/mosh/.artixlinux/pkgbase.yaml
+++ b/world/mosh/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: mosh
-  version: 1.4.0-21
+  version: 1.4.0-22
   arch:
     - x86_64
   pkgname:
     - mosh
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.4.0-21
+    version: 1.4.0-22
     packages:
-      - mosh-1.4.0-21-x86_64.pkg.tar.zst
+      - mosh-1.4.0-22-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
