--- a/world/onnx/.artixlinux/pkgbase.yaml
+++ b/world/onnx/.artixlinux/pkgbase.yaml
@@ -2,7 +2,7 @@
 team: world
 pkgbase:
   name: onnx
-  version: 1:1.17.0-4
+  version: 1:1.17.0-5
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - python-onnx
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,10 +33,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:1.17.0-4
+    version: 1:1.17.0-5
     packages:
-      - onnx-1:1.17.0-4-x86_64.pkg.tar.zst
-      - python-onnx-1:1.17.0-4-x86_64.pkg.tar.zst
+      - onnx-1:1.17.0-5-x86_64.pkg.tar.zst
+      - python-onnx-1:1.17.0-5-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
