--- a/world/opencv/.artixlinux/pkgbase.yaml
+++ b/world/opencv/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: opencv
-  version: 4.11.0-8
+  version: 4.11.0-9
   arch:
     - x86_64
   pkgname:
@@ -12,11 +12,11 @@ pkgbase:
     - python-opencv-cuda
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -35,13 +35,13 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.11.0-8
+    version: 4.11.0-9
     packages:
-      - opencv-4.11.0-8-x86_64.pkg.tar.zst
-      - opencv-samples-4.11.0-8-x86_64.pkg.tar.zst
-      - python-opencv-4.11.0-8-x86_64.pkg.tar.zst
-      - opencv-cuda-4.11.0-8-x86_64.pkg.tar.zst
-      - python-opencv-cuda-4.11.0-8-x86_64.pkg.tar.zst
+      - opencv-4.11.0-9-x86_64.pkg.tar.zst
+      - opencv-samples-4.11.0-9-x86_64.pkg.tar.zst
+      - python-opencv-4.11.0-9-x86_64.pkg.tar.zst
+      - opencv-cuda-4.11.0-9-x86_64.pkg.tar.zst
+      - python-opencv-cuda-4.11.0-9-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
