--- a/galaxy/firefox/PKGBUILD
+++ b/galaxy/firefox/PKGBUILD
@@ -1,9 +1,7 @@
-# Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
-# Contributor: Ionut Biru <ibiru@archlinux.org>
-# Contributor: Jakub Schmidtke <sjakub@gmail.com>
+# Maintainer: artist for Artix Linux
 
 pkgname=firefox
-pkgver=137.0.2
+pkgver=138.0.1
 pkgrel=1
 pkgdesc="Fast, Private & Safe Web Browser"
 url="https://www.mozilla.org/firefox/"
@@ -80,24 +78,33 @@ source=(
   $pkgname.desktop
   org.mozilla.$pkgname.metainfo.xml
   0001-Install-under-remoting-name.patch
+  policies.json
+  preferences.patch
+  preferences2.patch
 )
 validpgpkeys=(
   # Mozilla Software Releases <release@mozilla.com>
   # https://blog.mozilla.org/security/2023/05/11/updated-gpg-key-for-signing-firefox-releases/
   14F26682D0916CDD81E37B6D61B7B526D98F0353
 )
-sha256sums=('06fc3abaa822148bfa5ee7b759428d74052493876c053c05379c3f6c302bcd07'
+sha256sums=('9894b96203876f847637af20f961cd4494ff1f2d85e4c096a7f358f54d9ecb2b'
             'SKIP'
             'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
             '71fe797430198ac8c00b538dce537284cf526e48be0496698cf5a980d70c16da'
             '23f557fa7989adcae03cc9458d94716981dbcf0e9d6d52a289a2426e50b4b785'
-            '883ca2fa723a7572269d18559d5b82412782ad63e5dd3820eeb0540e3fe34314')
-b2sums=('2484e141ac0a3ffaace0991c126ef53adfbfa3a4c6ac70d7c54bbddb34a01146d53e457190ab67ce74662e4605ca21b531521c3a1cc7bff66e742d063a26bb33'
+            '883ca2fa723a7572269d18559d5b82412782ad63e5dd3820eeb0540e3fe34314'
+            'c25a6fa683c053afd7577d2ab84db6301684f1a8a52a1b76d2bb9802a86ed20a'
+            '21dfd320408ffd57239eabf13df493fe7d575be6b12b07554f8454c233750ab2'
+            '732a1b5b08aa2b2a572031ea3d15dee6910fea31722171cdd19dd8df85c604de')
+b2sums=('071b266dacd3bc65c4f5353c2e508e2cced215651263715e66213a5887753a58a851dc0e4b64ba1d97e14c52c27cf0576df766e74680ea65c54dd3a285c28807'
         'SKIP'
         '63a8dd9d8910f9efb353bed452d8b4b2a2da435857ccee083fc0c557f8c4c1339ca593b463db320f70387a1b63f1a79e709e9d12c69520993e26d85a3d742e34'
         '2c7936949ef922307fb593bd0480a13bde2eab8ae24fc89071d809d6659384705f9b7838b1ae8bc46b98a152ba01fcffad606d4c84796ad9bfaaf20166f0a0fd'
         '1a7fc030b1051df00df1b2f5b247b8c658de6cdfba0788041c830da3aaaa6ac974ab684e05feb80672aa2d2c22294cacfa93a71dc664b3e60becdd65e879fcee'
-        '8a894b01e405b628877483e40e9b018647977cb053b6af02afc901ed24d6e1f767f3db8c321070e33aea4a05ba16f1eb47ae600e5299b5f9caad03d20ba38cf5')
+        '8a894b01e405b628877483e40e9b018647977cb053b6af02afc901ed24d6e1f767f3db8c321070e33aea4a05ba16f1eb47ae600e5299b5f9caad03d20ba38cf5'
+        '1155404ff59b83a8f35660504f7fd98cec59a93a4b9a2a57055517b98ba41401d0c896bfcb7f8f9c177592f2f6e3cf8c3afb83cd411b9fa572df7847d0115c9c'
+        '3a6d97231824c9c2d97bd15023faa4cdd25ae59a34c1961e6cd12bb5d172ede95594fd1f7e3dbed7d79a645cf734961a4b7d2bdedaee55c716d49f0e7fdfc3a4'
+        '58e236e1fd9e05015444148382fe81c685f3c8502f1ab315138844981ecb3e1b514976e4c660b60aac677cc374ab2f5ad16d6631b0ba7cfd3aa3161b11211c23')
 
 
 prepare() {
@@ -108,6 +115,9 @@ prepare() {
   patch -Np1 -i ../0001-Install-under-remoting-name.patch
 
   echo -n "$_google_api_key" >google-api-key
+
+  patch -Np1 -i ../preferences.patch
+  patch -Np1 -i ../preferences2.patch
 
   cat >../mozconfig <<END
 ac_add_options --enable-application=browser
@@ -232,6 +242,9 @@ about=Mozilla Firefox for Artix Linux
 app.distributor=artixlinux
 app.distributor.channel=$pkgname
 app.partner.artixlinux=artixlinux
+startup.homepage_welcome_url.additional=""
+startup.homepage_override_url=""
+startup.homepage_welcome_url=""
 END
 
   local i theme=official
@@ -249,6 +262,7 @@ END
   install -Dvm644 ../$pkgname-symbolic.svg -t "$pkgdir/usr/share/icons/hicolor/symbolic/apps"
   install -Dvm644 ../$pkgname.desktop -t "$pkgdir/usr/share/applications"
   install -Dvm644 ../org.mozilla.$pkgname.metainfo.xml -t "$pkgdir/usr/share/metainfo"
+  install -Dvm644 "$srcdir/policies.json" "$pkgdir/usr/lib/$pkgname/distribution/policies.json"
 
   # Install a wrapper to avoid confusion about binary path
   install -Dvm755 /dev/stdin "$pkgdir/usr/bin/$pkgname" <<END
